auto-test/tests/chapter_18/invalid_types/scalar_required/struct_as_int.c
struct s {
  int a;
};

int main(void) {
  struct s x = {1};
  
  (void)~x;
  return 0;
}